--- a/style.css
+++ b/style.css
@@ -1,113 +1,174 @@
-body{
-  background-color: lightcyan;
-}
-h1{
-    padding: 10px; 
-    border: 3px solid black;  
-    text-align: center;
-    padding: 10px;
-    background-color: lightblue;
-    margin-left: 580px;
-    height: 120px;
-    width: fit-content;
+body {
+  text-align: center;
+  background-color: pink;
 }
 
+/* Parent Container */
+.content_img {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  float: left;
+  margin-right: 10px;
+  text-align: center;
+}
 
+/* Child Text Container */
+.content_img div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: red;
+  color: white;
+  margin-bottom: 5px;
+  font-family: sans-serif;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: visibility 0s, opacity 0.5s linear;
+  transition: visibility 0s, opacity 0.5s linear;
+}
 
-div.gallery {
-    margin: 5px;
-    border: 1px solid rgb(14, 14, 14);
-    float: left;
-    width: 180px;
-    margin-left: 90px;
-    background-color: rgb(205, 205, 123);
+/* Hover on Parent Container */
+.content_img:hover {
+  cursor: pointer;
+}
+
+.content_img:hover div {
+  width: 150px;
+  padding: 8px 15px;
+  visibility: visible;
+  opacity: 0.7;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Create five equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  height: 300px;
+  /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the four columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+      width: 100%;
   }
-  
-  div.gallery:hover {
-    border: 1px solid #777;
-  }
-  
-  div.gallery img {
-    width: 100%;
-    height: auto;
-  }
-  
-  div.desc {
-    padding: 15px;
-    text-align: center;
-  }
- 
- .gallery:hover div{
-    width:80px;
-    visibility: visible;
-    opacity:0.6;
-    background-color:rgb(190, 121, 121);
-    color: white;
-    position: absolute;
-   
- }
+}
 
- div.gallery:hover{
-    cursor: pointer;
-
- }
-
- div.container {
-    background-color: rgb(97, 173, 97);
-    border: 1px solid black;
-    padding: 2px;
-    height: 540px;
- }
-
-  .button {
-    background-color: lightblue;
-    margin-left: 640px;
-    margin-top: 50px;
-    border: none;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border: 3px solid black;  
-    cursor: pointer;
-  }
-
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-  }
+.heading {
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 20%;
+  background-color: lightblue;
+  margin: auto;
+}
 
 
-  .modal-content1 {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    text-align: center;
-    width: 30%;
-  }
+.button {
+  background-color: lightblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
-  .close {
-    background-color: lightblue;
-    
-  }
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #e7e7e7;
+}
 
- .placed{
-    padding:20px;
-    margin: 10px;
-    border:black 1px solid;
-    background-color: lightgreen;
+.button {
+  transition-duration: 0.4s;
+}
 
- }
+.button:hover {
+  background-color: gray;
+  /* Green */
+  color: white;
+}
 
- 
+.table {
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 10px;
+  margin: 2%;
+  background-color: lightgreen;
+}
+
+.myBtn {
+  width: 150px;
+  height: 50px;
+  font-size: 18px;
+  color: black;
+  border-radius: 10px;
+  background-color: lightblue;
+  margin-top: 20px;
+  margin: 0 auto;
+  display: block;
+}
+
+#btnOk {
+  width: 100px;
+  height: 50px;
+  font-size: 18px;
+  color: black;
+  border-radius: 10px;
+  margin-top: 20dp;
+  background-color: lightblue;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: lightgreen;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
